check_errors4.txt
    Checking swe-edge-egress-tls v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\tls)
    Checking swe-edge-egress-cassette v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cassette)
    Checking swe-edge-egress-cache v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cache)
    Checking swe-edge-egress-rate v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\rate)
    Checking swe-edge-egress-http-transport v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\transport)
error[E0432]: unresolved import `swe_edge_egress_cache::builder`
 --> main\features\cache\tests\gateway_int_test.rs:3:48
  |
3 | use swe_edge_egress_cache::{build_cache_layer, builder, CacheConfig, CacheLayer, Error};
  |                                                ^^^^^^^ no `builder` in the root

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\cache\tests\gateway_int_test.rs:34:10
   |
34 |         &b_cfg.max_entries >= 1,
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\cache\tests\gateway_int_test.rs:36:10
   |
36 |         &b_cfg.max_entries
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\cache\tests\gateway_int_test.rs:46:10
   |
46 |         &b_cfg.default_ttl_seconds >= 1,
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\cache\tests\gateway_int_test.rs:48:10
   |
48 |         &b_cfg.default_ttl_seconds
   |          ^^^^^ not found in this scope

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\tls\tests\core_tls_layer_int_test.rs:57:17
   |
57 |     let layer = ApplicationConfigBuilder::with_config(TlsConfig::Pem {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\tls\tests\core_tls_layer_int_test.rs:84:17
   |
84 |     let layer = ApplicationConfigBuilder::with_config(TlsConfig::Pkcs12 {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0277]: can't compare `&u64` with `{integer}`
  --> main\features\cache\tests\gateway_int_test.rs:90:5
   |
90 | /     assert_eq!(
91 | |         &b_cfg.default_ttl_seconds,
92 | |         30,
93 | |         "custom ttl must be stored unmodified"
94 | |     );
   | |_____^ no implementation for `&u64 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u64`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:59:22
   |
59 |                 if !(**left_val == *right_val) {
   |                      +

error[E0277]: can't compare `&u64` with `{integer}`
  --> main\features\cache\tests\gateway_int_test.rs:95:5
   |
95 | /     assert_eq!(
96 | |         &b_cfg.max_entries,
97 | |         100,
98 | |         "custom max_entries must be stored unmodified"
99 | |     );
   | |_____^ no implementation for `&u64 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u64`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:59:22
   |
59 |                 if !(**left_val == *right_val) {
   |                      +

For more information about this error, try `rustc --explain E0433`.
error: could not compile `swe-edge-egress-tls` (test "core_tls_layer_int_test") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0277, E0425, E0432.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `swe-edge-egress-cache` (test "gateway_int_test") due to 7 previous errors
error[E0425]: cannot find function `builder` in crate `swe_edge_egress_retry`
  --> main\features\transport\tests\http_egress_factory_int_test.rs:18:39
   |
18 |         retry: swe_edge_egress_retry::builder()
   |                                       ^^^^^^^ not found in `swe_edge_egress_retry`

error[E0425]: cannot find function `builder` in crate `swe_edge_egress_rate`
  --> main\features\transport\tests\http_egress_factory_int_test.rs:22:37
   |
22 |         rate: swe_edge_egress_rate::builder()
   |                                     ^^^^^^^ not found in `swe_edge_egress_rate`

error[E0425]: cannot find function `builder` in crate `swe_edge_egress_breaker`
  --> main\features\transport\tests\http_egress_factory_int_test.rs:26:43
   |
26 |         breaker: swe_edge_egress_breaker::builder()
   |                                           ^^^^^^^ not found in `swe_edge_egress_breaker`

error[E0425]: cannot find function `builder` in crate `swe_edge_egress_cache`
  --> main\features\transport\tests\http_egress_factory_int_test.rs:30:39
   |
30 |         cache: swe_edge_egress_cache::builder()
   |                                       ^^^^^^^ not found in `swe_edge_egress_cache`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `swe-edge-egress-http-transport` (test "http_egress_factory_int_test") due to 4 previous errors
